[package]
name = "derive-demo"
version = "0.1.1"
authors = ["Marisada Pitakthum <p.marisada@gmail.com>"]
description = "`#[derive(Demo)]` implements simple constructor functions for structs and enums."
license = "MIT"
repository = "https://github.com/marisada/derive-demo"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = {version = "2", features = ["parsing"]}

[features]
default = ["std"]
std = []
